--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,3 +15,8 @@
 <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 
   </head>
+
+  <body>
+    {{ content }}
+  </body>
+</html>
